manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: tmp
          emptyDir: {}
        - name: nextjs-cache
          emptyDir: {}
      containers:
        - name: frontend
          image: ghcr.io/podkrepi-bg/frontend
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: nextjs-cache
              mountPath: /app/.next/cache
          ports:
            - containerPort: 3040
          resources:
            limits:
              memory: 350Mi
              cpu: 500m
            requests:
              memory: 256Mi
              cpu: 200m
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3040
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3040
            initialDelaySeconds: 5
            periodSeconds: 5
