manifests/base/maintenance.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-maintenance-headless
spec:
  selector:
    app: frontend-maintenance
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-maintenance
  labels:
    app: frontend-maintenance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-maintenance
  template:
    metadata:
      labels:
        app: frontend-maintenance
    spec:
      automountServiceAccountToken: false
      containers:
        - name: frontend
          image: ghcr.io/podkrepi-bg/frontend/maintenance:master
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 40Mi
              cpu: 150m
            requests:
              memory: 20Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
