manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-headless
spec:
  selector:
    app: frontend
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: 3040
